fixed menu overlapping issue

--- a/src/styles/header/_header.scss
+++ b/src/styles/header/_header.scss
@@ -16,7 +16,7 @@
 #modal2 {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 99; /* Sit on top */
     padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
@@ -31,6 +31,7 @@
     box-shadow: 0 2px 8px 0 rgba(197,205,232,0.68);
     position: fixed;
     width: 100%;
+    z-index: 99;
 }
 .wall-header__connect-tab{
     @extend %common-tab;
